Fixed: Adjust AudioInfo column to prevent wrapping

--- a/frontend/src/Album/Details/TrackRow.css
+++ b/frontend/src/Album/Details/TrackRow.css
@@ -19,7 +19,7 @@
 .audio {
   composes: cell from '~Components/Table/Cells/TableRowCell.css';
 
-  width: 250px;
+  width: 300px;
 }
 
 .duration,
